plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'project-report'
}

group = 'com.example.demo'
version = '1.0.0'
description = 'Meeting Room Booking System'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.xerial:sqlite-jdbc'
	implementation 'org.hibernate.orm:hibernate-community-dialects'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('bootRun') {
	jvmArgs = [
		'--enable-native-access=ALL-UNNAMED',
		'--sun-misc-unsafe-memory-access=allow'
	]
}

tasks.withType(JavaCompile).configureEach {
	options.fork = true
	options.forkOptions.jvmArgs += ['--sun-misc-unsafe-memory-access=allow']
}
